--- a/EventStore.VSTools/Resources.resx
+++ b/EventStore.VSTools/Resources.resx
@@ -120,6 +120,10 @@
   <data name="CanNotCreateWindow" xml:space="preserve">
     <value>Can not create EventStore Queries window.</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="script_16xLG" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\script_16xLG.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="ToolWindowTitle" xml:space="preserve">
     <value>EventStore Queries</value>
   </data>
