--- a/EventStore.VSTools/Resources.resx
+++ b/EventStore.VSTools/Resources.resx
@@ -127,4 +127,7 @@
   <data name="ToolWindowTitle" xml:space="preserve">
     <value>EventStore Queries</value>
   </data>
+  <data name="projectNodeIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\projectNodeIcon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
